--- a/css/styles.css
+++ b/css/styles.css
@@ -610,8 +610,7 @@ p {
     color: var(--primary-text-color);
 }
 
-.project-link:hover,
-.project-link:focus {
+.project-link:hover {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
